Trial updated with dataloader

--- a/trial.ipynb
+++ b/trial.ipynb
@@ -15,13 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "f7e3b275-a3c1-4e3a-a51a-3003d5833390",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import itertools\n",
+    "from random import randint\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import librosa\n",
@@ -12131,24 +12132,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4a679f02-0e6c-4cd6-843d-ad827a4a7aa3",
    "metadata": {},
    "outputs": [],
    "source": [
     "class EEGDataset(data.Dataset):\n",
-    "    def __init__(self, files: list, frame_length:int, hop_length:int) -> None:\n",
+    "    def __init__(self, files, input_length, channels, task, g_con = True) -> None:\n",
     "        super().__init__()\n",
-    "        self.frame_length = frame_length\n",
-    "        self.hop_length = hop_length\n",
-    "        self.files = files\n",
+    "        self.input_length = input_length\n",
+    "        self.files = self.group_recordings(files)\n",
+    "        self.channels = channels\n",
+    "        self.task = task\n",
+    "        self.g_con = g_con\n",
+    "\n",
+    "    def group_recordings(self, files):\n",
+    "        new_files = []\n",
+    "        grouped = itertools.groupby(sorted(files), lambda x: \"_-_\".join(os.path.basename(x).split(\"_-_\")[:3]))\n",
+    "        for recording_name, feature_paths in grouped:\n",
+    "            new_files += [sorted(feature_paths, key=lambda x: \"0\" if x == \"eeg\" else x)]\n",
+    "        return new_files\n",
     "        \n",
     "    def __len__(self):\n",
     "        return len(self.files)\n",
     "    \n",
-    "    def __getitem__(self, index):\n",
-    "        \n",
-    "        pass"
+    "    def __getitem__(self, recording_index):\n",
+    "        if self.task !=\"test\":\n",
+    "            framed_data = []\n",
+    "            for idx, feature in enumerate(self.files[recording_index]):\n",
+    "                data = np.load(feature)\n",
+    "                if idx == 0:\n",
+    "                    start_idx = randint(0, len(data) - self.input_length)\n",
+    "                    \n",
+    "                framed_data += [data[start_idx:start_idx + self.input_length]]\n",
+    "            if self.g_con == True:\n",
+    "                sub_id = feature.split('/')[-1].split('_-_')[1].split('-')[-1]\n",
+    "                sub_id = int(sub_id) - 1\n",
+    "            else:\n",
+    "                sub_id = torch.FloatTensor([0])\n",
+    "            return torch.FloatTensor(framed_data[0]), torch.FloatTensor(framed_data[1])\n",
+    "        else:\n",
+    "            for idx, feature in enumerate(self.files[recording_index]):\n",
+    "                data = np.load(feature)\n",
+    "                nsegment = data.shape[0] // self.input_length\n",
+    "                data = data[:int(nsegment * self.input_length)]\n",
+    "                segment_data = [torch.FloatTensor(data[i:i+self.input_length]).unsqueeze(0) for i in range(0, data.shape[0], self.input_length)]\n",
+    "                segment_data = torch.cat(segment_data)\n",
+    "                framed_data += [segment_data]\n",
+    "            \n",
+    "            if self.g_con == True:\n",
+    "                sub_idx = feature.split('/')[-1].split('_-_')[1].split('-')[-1]\n",
+    "                sub_idx = int(sub_idx) - 1    \n",
+    "    \n",
+    "            else:\n",
+    "                sub_idx = torch.FloatTensor([0])\n",
+    "            return framed_data[0], framed_data[1]"
    ]
   },
   {
@@ -12175,10 +12213,12 @@
     "        self.data_dir = os.path.join(self.config[\"dataset_folder\"],self.config[\"derivatives_folder\"],  self.config[\"split_folder\"])\n",
     "        self.features = [\"eeg\",  \"mel\"]\n",
     "        \n",
-    "        self.batch_size = 64 if batch_size is None else batch_size\n",
-    "        self.frame_length = 64 if frame_length is None else frame_length\n",
-    "        self.hop_length = 64 if hop_length is None else hop_length\n",
-    "        \n",
+    "        self.batch_size = batch_size\n",
+    "        self.frame_length = 64\n",
+    "        self.hop_length = 10\n",
+    "\n",
+    "        self.input_length = self.frame_length * self.hop_length\n",
+    "        self.channel = 64\n",
     "    \n",
     "    def prepare_data(self):\n",
     "        # download, IO, etc. Useful with shared filesystems\n",
@@ -12190,13 +12230,13 @@
     "        # called on every process in DDP\n",
     "        if stage==\"fit\":\n",
     "            train_files = [x for x in glob.glob(os.path.join(data_dir, \"train\", \"train_-_*\")) if os.path.basename(x).split(\"_-_\")[-1].split(\".\")[0] in self.features]\n",
-    "            self.train = EEGDataset(files=train_files, )\n",
+    "            self.train = EEGDataset(files=train_files, input_length=self.input_length, channel=self.channel, task=\"train\", g_con=False)\n",
     "        if stage == \"validate\":\n",
-    "            train_files = [x for x in glob.glob(os.path.join(data_dir, \"val\", \"val_-_*\")) if os.path.basename(x).split(\"_-_\")[-1].split(\".\")[0] in self.features]\n",
-    "            self.val = EEGDataset(files=train_files, )\n",
+    "            val_files = [x for x in glob.glob(os.path.join(data_dir, \"val\", \"val_-_*\")) if os.path.basename(x).split(\"_-_\")[-1].split(\".\")[0] in self.features]\n",
+    "            self.val = EEGDataset(files=val_files, input_length=self.input_length, channel=self.channel, task=\"val\", g_con=False)\n",
     "        if stage == \"test\":\n",
-    "            train_files = [x for x in glob.glob(os.path.join(data_dir, \"test\", \"test_-_*\")) if os.path.basename(x).split(\"_-_\")[-1].split(\".\")[0] in self.features]\n",
-    "            EEGDataset(files=train_files, )\n",
+    "            test_files = [x for x in glob.glob(os.path.join(data_dir, \"test\", \"test_-_*\")) if os.path.basename(x).split(\"_-_\")[-1].split(\".\")[0] in self.features]\n",
+    "            self.test = EEGDataset(files=test_files, input_length=self.input_length, channel=self.channel, task=\"test\", g_con=False)\n",
     "        if stage == \"predict\":\n",
     "           pass\n",
     "        else:\n",
@@ -12237,8 +12277,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "906819bc-9de6-4eee-a835-ba6ada224df1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.FloatTensor([0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa290299-3a1d-4d0c-87e9-9384bdb04bfc",
    "metadata": {},
    "outputs": [],
    "source": []
